package behavioral.observer.ATM;

public interface TheoDoiATM {
    void nhanThongBao(int soTienRut,  boolean thanhCong);
    boolean kiemTraSoDu(int soTien);
}
